# MoneyScam_in_Myanmar

./: .env.example  Burmese Money Scam Classification report summary.docx  Dockerfile.api  Makefile  README.md  docker-compose.yml  main.py  mlflow.db  money_scam_EDA.ipynb  preprocess_text.py  project_summary.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_deployment.py  train_embeddings_mmdt.py  transformer_pipeline.py  word2vwc_fasttext_vectorizer.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
burmese_money_scam_classification/: Burmese Money Scam Classification report summary.docx  Burmese money scam_summary.pptx  money_scam_EDA.ipynb  moneyscam_literature_reivew.pptx  preprocess_text.py  streamlit_deployment.py  syllable_unigram_scam_detector.pkl  transformer_pipeline.py
burmese_money_scam_classification/models/: scam_detector_tfidf_syllable.pkl  scam_detector_tfidf_word.pkl  uni_bi_scam_detector.pkl  (+1 more)
configs/: inference.yaml  mlflow.yaml  thresholds.yaml  train.yaml
datasets/: job posts-mixed.xlsx  mixed data 1.xlsx  mixed data 2.xlsx  mostly scam data 1.xlsx  mostly scam data 2.xlsx  mostly scam data 3.xlsx  myanmar_news_data.csv  non scam advertisements 1.xlsx  non scam advertisements 2.xlsx  non scam advertisements 3.xlsx  real text from sms.xlsx  synthetic_scam_messages.csv
models/: best_model_scam_detector.skops
notebooks/: mlflow_register_and_load.ipynb  mlflow_test.ipynb
tests/: test_api.py  test_pipeline_shapes.py  test_preprocess.py  test_threshold_policy.py
ui/: streamlit_app.py
(+27 files in other folders)
